@@ -3,6 +3,7 @@
 ## 2.7 - Unreleased
 - Consider mimetype "message/news" as "gemtext" because file is sometimes confused. (reported by JMCS)
 - "shell" (or "!") now works even without content (so you can run it on startup)
+- ignore annoying warnings for LibreSSL users (by Anna cyberTailor)
 
 ## 2.6 - February 24th 2025
 FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
